--- a/CommonLibProject/CommonUtils/src/main/res/values/attrs.xml
+++ b/CommonLibProject/CommonUtils/src/main/res/values/attrs.xml
@@ -83,6 +83,30 @@
         </attr>
     </declare-styleable>
 
+    <declare-styleable name="NestingListView">
+        <attr name="nesting_list_view_touch_intercept_mode" format="enum">
+            <enum name="use_supper_default" value="-1" />
+            <enum name="all_by_myself" value="0" />
+            <enum name="all_by_myself_but_threshold" value="1" />
+            <enum name="horizontal" value="2" />
+            <enum name="horizontal_but_threshold" value="3" />
+            <enum name="vertical" value="4" />
+            <enum name="vertical__but_threshold" value="5" />
+        </attr>
+    </declare-styleable>
+
+    <declare-styleable name="NestingGridView">
+        <attr name="nesting_grid_view_touch_intercept_mode" format="enum">
+            <enum name="use_supper_default" value="-1" />
+            <enum name="all_by_myself" value="0" />
+            <enum name="all_by_myself_but_threshold" value="1" />
+            <enum name="horizontal" value="2" />
+            <enum name="horizontal_but_threshold" value="3" />
+            <enum name="vertical" value="4" />
+            <enum name="vertical__but_threshold" value="5" />
+        </attr>
+    </declare-styleable>
+
     <declare-styleable name="LoadingPager">
         <attr name="loadingDrawable" format="reference" />
         <attr name="loadingText" format="string" />
